kubernetes/apps/degoog/degoog/app/route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: degoog
  namespace: degoog
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - degoog.blackcats.cc
  rules:
    - backendRefs:
        - name: degoog
          port: 4444
